--- a/css/agency.css
+++ b/css/agency.css
@@ -164,10 +164,12 @@ header .container{
 	position: relative;
 	width: 100%;
 	height: 100vh;
+	text-shadow: 4px 4px 4px #aaa;
 }
 .intro-heading{
 	color: #fff;
 	text-align: center;
-	font-size: 40px;
+	font-size: 64px;
 	padding-top: 45vh;
+	font-family: 'Tangerine', serif !important;
 }
